BE - reduce code smells to less than 50